--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
 	<title>Invie- Tus mejores guitarras</title>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta:400,600'rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" href="CSS/invie.css" />
+	<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta:400,600'rel='stylesheet' type='text/css' /> -->
+	<style>
+	@font-face{font-family:'icomoon';src:url(fonts/icomoon.eot?hf0b45);src:url(fonts/icomoon.eot?hf0b45#iefix) format("embedded-opentype"),url(fonts/icomoon.ttf?hf0b45) format("truetype"),url(fonts/icomoon.woff?hf0b45) format("woff"),url(fonts/icomoon.svg?hf0b45#icomoon) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e9bd"}body{font-family:'Allerta',sans-serif;margin:0;min-height:100vh;display:flex flex-direction: column}.background{background-color:#466173;background-image:url(img/background.png);background-size:cover}.contenedor{max-width:800px;margin:auto;position:relative}.button{background:#fc3e53;background:linear-gradient(to left,#fe344e,#ff7350);border-radius:12px;border:none;color:#fff;font-size:18px;padding:7px 12px;text-decoration:none}.header{position:relative}.portada{color:#fff;height:500px;padding:20px}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu li{display:inline-block;margin-left:30px;right:0}.menu li:before{content:'∘';color:#fff;font-size:50px;line-height:20px}.menu a{color:#fff;text-decoration:none}.logotipo{display:inline-block;margin-left:0}.titulo{font-size:70px;font-family:'Montserrat',sans-serif;margin-bottom:0;margin-top:70px}.titulo span{text-decoration:underline}.title-a{font-size:24px;margin-top:0}.guitarras{color:#1F313C;margin-bottom:60px}.guitarras h2{font-family:'Montserrat',sans-serif;font-size:35px}.derecha{float:right;position:relative;top:-127px}.burger-button{background:#395667;border-radius:50%;color:#fff;display:inline-block;text-align:center;line-height:40px;height:40px;width:40px;position:fixed;left:0;top:0;z-index:3;display:none}.video-demo{max-width:500px;width:100%;border:5px solid #3c5b6e}.video-demo-contenedor{display:flex;justify-content:center;margin-bottom:80px}@media screen and (max-width: 800px){.titulo{font-size:45px;margin-top:30px}.title-a{font-size:18px}.portada{height:auto}.portada .button{display:inline-block;margin-bottom:30px}.guitarras{text-align:center;margin:0}.derecha{float:none;position:static}}@media screen and (max-width: 650px){.header{text-align:center}.logotipo{margin:0}.menu{display:block;position:static}.menu li:first-child{margin:0}.menu ul{padding:0}}@media screen and (max-width: 500px){.portada .button{display:block}.burger-button{display:block}.portada .contenedor{position:static}.header{position:static}.menu{background:rgba(255,60,88,.8);display:flex;align-items:center;position:fixed;top:0;left:-100%;bottom:0;right:0;width:100%;z-index:2}.menu ul{flex:1}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid #fff}.menu li:first-child{border-top:1px solid #fff}.menu li:before{display:none}.portada{text-align:center}.titulo{font-size:30px}.title-a{font-size:16px}.guitarra img{width:200px}.video-demo-contenedor{margin:0 30px 30px 10px}}.video-responsive-contenedor{position:relative;padding-top:56.25%}.video-responsive-src{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%}@media screen and (-webkit-min-device-pixel-ratio: 2){.background{background-image:url(img/background2x.png)}}
+	</style>
 </head>
 <body>
 	<section id="portada" class="portada background">
@@ -105,6 +107,19 @@
 			</form>	
 		</div>	
 	</footer>
+	<script type="text/javascript">
+	  WebFontConfig = {
+	    google: { families: [ 'Montserrat:400,700:latin', 'Allerta::latin' ] }
+	  };
+	  (function() {
+	    var wf = document.createElement('script');
+	    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	    wf.type = 'text/javascript';
+	    wf.async = 'true';
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(wf, s);
+	  })(); 
+  </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.6.2/blazy.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 	<script>
@@ -145,5 +160,6 @@
 		gestos.on('swipeleft', hideMenu);
 		gestos.on('swiperight',showMenu);	 	
 	</script>
+	<link rel="stylesheet" href="CSS/invie.css" />
 </body>
 </html>
