--- a/index.html
+++ b/index.html
@@ -160,6 +160,6 @@
 		gestos.on('swipeleft', hideMenu);
 		gestos.on('swiperight',showMenu);	 	
 	</script>
-	<link rel="stylesheet" href="CSS/invie.css" />
+	<link rel="stylesheet" href="CSS/invie.min.css" />
 </body>
 </html>
